Consolidate oss/pro install flavors